shellfirm/src/snapshots/shellfirm__config__test_config__can_add_check_groups-2.snap
---
source: shellfirm/src/config.rs
expression: config.get_settings_from_file()
---
Ok(
    Settings {
        challenge: Math,
        includes: [
            "group-1",
            "group-2",
        ],
        ignores: [],
    },
)
