shellfirm/src/snapshots/shellfirm__config__test_config__can_add_checks_group-2.snap
---
source: shellfirm/src/config.rs
expression: "settings_config.add_checks_group(&[\"test2\".to_string()])"
---
Ok(
    Context {
        challenge: Default,
        includes: [
            "test",
            "test2",
        ],
        version: "0.2.2",
        checks: [
            Check {
                test: "test-value",
                method: Contains,
                enable: true,
                description: "description",
                from: "test",
                challenge: Default,
                filters: {},
            },
            Check {
                test: "test-1value",
                method: Contains,
                enable: true,
                description: "description",
                from: "test1",
                challenge: Default,
                filters: {},
            },
        ],
    },
)
