shellfirm/src/snapshots/shellfirm__config__test_config__can_crate_new_config-2.snap
---
source: shellfirm/src/config.rs
expression: "Path::new(&config.setting_file_path).is_file()"
---
true
