shellfirm/src/snapshots/shellfirm__config__test_config__can_create_default_config_file-2.snap
---
source: shellfirm/src/config.rs
expression: "fs::read_to_string(config.config_file_path)"
---
Ok(
    "---\nchallenge: Math\nincludes:\n  - base\n  - fs\n  - git\nversion: 0.0.0\n",
)
