shellfirm/src/snapshots/shellfirm__config__test_config__can_create_default_config_file.snap
---
source: shellfirm/src/config.rs
expression: config.create_default_config_file()
---
Ok(
    (),
)
