shellfirm/src/snapshots/shellfirm__config__test_config__can_load_config_from_file.snap
---
source: shellfirm/src/config.rs
expression: config.load_config_from_file()
---
Ok(
    Context {
        challenge: Math,
        includes: [
            "default-check",
        ],
        version: "0.2.2",
        checks: [
            Check {
                test: "default-check",
                method: Regex,
                enable: true,
                description: "",
                from: "default-check",
                challenge: Default,
                filters: {},
            },
        ],
    },
)
