shellfirm/src/snapshots/shellfirm__config__test_config__can_load_default_config.snap
---
source: shellfirm/src/config.rs
expression: config.load_default_config()
---
Ok(
    Context {
        challenge: Math,
        includes: [
            "base",
            "fs",
            "git",
        ],
        version: "",
        checks: [],
    },
)
