shellfirm/src/snapshots/shellfirm__config__test_config__can_manage_config_file.snap
---
source: shellfirm/src/config.rs
expression: "Path::new(&config.setting_file_path).is_file()"
---
false
