shellfirm/src/snapshots/shellfirm__config__test_config__can_remove_check_groups.snap
---
source: shellfirm/src/config.rs
expression: config.get_settings_from_file()
---
Ok(
    Settings {
        challenge: Math,
        includes: [
            "fs",
            "git",
        ],
        ignores: [],
    },
)
